--- a/angular.json
+++ b/angular.json
@@ -20,12 +20,15 @@
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
+
             "assets": [
               {
                 "glob": "**/*",
-                "input": "public"
+                "input": "src/assets",
+                "output": "/assets"
               }
             ],
+
             "styles": ["src/styles.scss"]
           },
           "configurations": {
@@ -75,11 +78,10 @@
             "assets": [
               {
                 "glob": "**/*",
-                "input": "src/app/assets",
+                "input": "src/assets",
                 "output": "/assets"
               }
-            ],
-            "styles": ["src/styles.scss"]
+            ]
           }
         }
       }
