--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,31 @@
-name: Deploy Angular to GitHub Pages
+name: Deploy Angular to GitHub Pages (Official)
 
 on:
   push:
     branches:
       - main 
-
 permissions:
-  contents: write  
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout 
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js 
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
       - name: Install dependencies
         run: npm ci
 
@@ -27,8 +33,19 @@ jobs:
         run: |
           npm run build -- --configuration production --base-href "/artabrian-weekend-2025/"
 
-      - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
+      - name: Upload production build as artifact 📤
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: gh-pages       
-          folder: dist/artabrian-weekend-2025  
+          path: dist/artabrian-weekend-2025
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    steps:
+      - name: Deploy to GitHub Pages 🚀
+        id: deployment
+        uses: actions/deploy-pages@v4
